--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "grunt-reload",
   "version": "1.0.0",
   "devDependencies": {
-        "grunt": "~0.4.3",
-        "matchdep": "~0.3.0",
-        "grunt-express": "~1.2.1",
-        "grunt-contrib-watch": "~0.6.0",
-        "grunt-open": "~0.2.3"
+    "grunt": "~0.4.3",
+    "matchdep": "~0.3.0",
+    "grunt-express": "~1.2.1",
+    "grunt-contrib-watch": "~0.6.0",
+    "grunt-open": "~0.2.3"
+  },
+  "dependencies": {
+    "express": "^4.10.2",
+    "socket.io": "^1.3.5"
   }
 }
